# ChangeLog for dev-perl/Email-MIME
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/ChangeLog,v 1.30 2009/10/12 12:04:02 tove Exp $

  12 Oct 2009; Torsten Veller <tove@gentoo.org> -Email-MIME-1.860.ebuild,
  -Email-MIME-1.861.ebuild:
  Cleanup

  18 Sep 2009; Torsten Veller <tove@gentoo.org> Email-MIME-1.863.ebuild:
  Stable on amd64 (#284059)

  15 Sep 2009; Joseph Jezak <josejx@gentoo.org> Email-MIME-1.863.ebuild:
  Marked ppc stable for bug #284059.

  14 Sep 2009; Tom Gall <tgall@gentoo.org> Email-MIME-1.863.ebuild:
  ppc64, stable bug #284059

  11 Sep 2009; Raúl Porcel <armin76@gentoo.org> Email-MIME-1.863.ebuild:
  alpha/ia64/sparc stable wrt #284059

  10 Sep 2009; Christian Faulhammer <fauli@gentoo.org>
  Email-MIME-1.863.ebuild:
  stable x86, bug 284059

*Email-MIME-1.863 (31 Jan 2009)

  31 Jan 2009; Torsten Veller <tove@gentoo.org> -Email-MIME-1.862.ebuild,
  +Email-MIME-1.863.ebuild:
  Version bump

*Email-MIME-1.862 (26 Jan 2009)

  26 Jan 2009; Torsten Veller <tove@gentoo.org> +Email-MIME-1.862.ebuild:
  Version bump

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -Email-MIME-1.857.ebuild,
  -Email-MIME-1.858.ebuild, -Email-MIME-1.859.ebuild:
  Cleanup

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> Email-MIME-1.861.ebuild:
  alpha/ia64/sparc/x86 stable

*Email-MIME-1.861 (29 Apr 2008)

  29 Apr 2008; Yuval Yaari <yuval@gentoo.org> +Email-MIME-1.861.ebuild:
  Version bump

  17 Dec 2007; Samuli Suominen <drac@gentoo.org> Email-MIME-1.860.ebuild:
  amd64 stable

  08 Dec 2007; Raúl Porcel <armin76@gentoo.org> Email-MIME-1.860.ebuild:
  alpha/ia64/sparc stable

  04 Dec 2007; Markus Rothe <corsair@gentoo.org> Email-MIME-1.860.ebuild:
  Stable on ppc64; bug #198075

  04 Dec 2007; nixnut <nixnut@gentoo.org> Email-MIME-1.860.ebuild:
  Stable on ppc wrt bug 198075

  03 Dec 2007; Christian Faulhammer <opfer@gentoo.org>
  Email-MIME-1.860.ebuild:
  stable x86, bug 198075
