@@ -1,0 +1,26 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/Attic/Email-MIME-1.901.ebuild,v 1.1 2009/11/10 10:12:51 robbat2 Exp $
+
+MODULE_AUTHOR=RJBS
+inherit perl-module
+
+DESCRIPTION="Easy MIME message parsing"
+
+LICENSE="|| ( Artistic GPL-2 )"
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~ia64 ~ppc ~ppc64 ~sparc ~x86"
+IUSE="test"
+
+RDEPEND=">=dev-perl/Email-MIME-Encodings-1.310
+	>=dev-perl/Email-MIME-ContentType-1.012
+	>=dev-perl/Email-Simple-2.004
+	>=dev-perl/MIME-Types-1.18
+	!dev-perl/Email-MIME-Modifier
+	!dev-perl/Email-MIME-Creator
+	dev-lang/perl"
+DEPEND="${RDEPEND}
+	test? ( dev-perl/Test-Pod
+		dev-perl/Test-Pod-Coverage )"
+
+SRC_TEST="do"
