@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Email-MIME
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/ChangeLog,v 1.30 2009/10/12 12:04:02 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Email-MIME/ChangeLog,v 1.31 2009/11/10 10:12:51 robbat2 Exp $
+
+*Email-MIME-1.901 (10 Nov 2009)
+
+  10 Nov 2009; Robin H. Johnson <robbat2@gentoo.org>
+  +Email-MIME-1.901.ebuild:
+  Version bump via perl-bump experimental tool.
 
   12 Oct 2009; Torsten Veller <tove@gentoo.org> -Email-MIME-1.860.ebuild,
   -Email-MIME-1.861.ebuild:
